# funnelBot

./: .env.example  .gitignore  README.md  compose.yaml  config.py  main.py  pyproject.toml
bot/: __init__.py  funnel.py  handlers.py  user.py
db/: __init__.py
init_db/: init_db.sql
