[tool.poetry]
name = "telebot"
version = "0.1.0"
description = ""
authors = ["egas77 <ebedak2003@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
tgcrypto = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
